# rust-api-template

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  fly.toml
.github/workflows/: ci.yml
migrations/: 20250125174920_init.up.sql
src/: book.rs  error.rs  lib.rs  main.rs  model.rs  schema.rs
src/books/: mod.rs  model.rs  repository.rs  routes.rs
tests/: Cargo.toml  book_repository.rs  book_routes.rs  lib.rs
tests/books/: repository.rs  routes.rs
tests/common/: mod.rs
